# internship-data-analytics

./: pyproject.toml
day-01/: crypto.py  dict_concepts.py
day-02/: lottery_ticket.py
day-03/: isro_api.py  todo_list.py
day-03/tasks/: t1_todo_list.py
day-04/: README.md  bar_graph.py  line_chart.py  pie_chart.py
day-05/: histogram.py  scatter_plot.py
day-2/: guess_the_number.py
misc/: visualization-summary.md
misc/datasets/: ecommerce-orders.csv  student-data.csv
project/: city_coordinates.csv  main.py  process_data.py  pyproject.toml  visualizations.py
project/datasets/: air_quality_dataset.csv  ngo_donation_dataset.csv
week-1/: README.md
week-1/day-01/: README.md  corona_cases.py  crypto.py  dict_concepts.py
week-1/day-02/: README.md  guess_the_number.py  lottery_ticket.py  search_using_api.py
week-1/day-03/: README.md  todo_list.py
week-1/day-04/: README.md
week-1/day-05/: README.md  bubble_chart.py  multiline.py
week-2/: README.md
week-2/day-6/: README.md  area_graph.py  mutli_scatter.py  stacked_plot.py  stem_chart.py
week-2/day-7/: README.md  box_plot.py  step_chart.py  violin_plot.py
week-2/day-8/: README.md  job_frame.py  pandas_demo.py  pandas_info.py
week-2/day-9/: README.md  reading_data.py
week-3/: README.md
week-3/day-10/: README.md  streamlit_forms.py  streamlit_intro.py  streamlit_menu.py
week-3/day-11/: README.md  data_viz_with_pandas.py  handling_null_values.py  pandas_grouping_operations.py
week-3/day-12/: README.md  dynamic-api-demo.py  dynamic-api-practice-2.py  dynamic-api-practice.py
(+10 files in other folders)
