[project]
name = "airlens-dashboard"
version = "0.1.0"
description = "AirLens: AQI Monitoring & Analytics Dashboard"
authors = [
    { name = "MrBot", email = "mrbot@example.com" }
]
dependencies = [
    "streamlit",
    "pandas",
    "matplotlib",
    "numpy",
    "plotly",
    "geopy",
    "requests",
    "streamlit-option-menu",
    "streamlit-extras",
    "seaborn"
]
requires-python = ">=3.10"
